# resin-release-tool

./: CHANGES.md  LICENSE  Makefile  README.md  application.yml  pyproject.toml  setup.py
.circleci/: config.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: question.md
.github/actions/setup-python-build-env/: action.yml
.github/workflows/: license-scan.yml  publish-to-pypi.yml  pull-request.yml
balena_release_tool/: cli.py  releaser.py
resin_release_tool/: balena_backend.py  cli.py  releaser.py
tests/integration/: test_info.py
tests/unit/: test_releaser.py
