[tool.poetry]
name = "resin-release-tool"
version = "v0.3.0"
readme = "README.md"
description = "Release tool to have canary in resin.io"
homepage = "https://github.com/mobilityhouse/resin-release-tool"
authors = ["roger <roger.duran@mobilityhouse.com>"]
keywords = ["resin", "deploy"]
license = "MIT"

[tool.poetry.scripts]
resin-release-tool = 'resin_release_tool.cli:cli'

[tool.poetry.dependencies]
python = "^3.7"
balena-sdk = "^11.2.0"
click = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
